<!--  ************************************** -->
<!--     MADE BY OSID ABU-ALRUB (1183096)    -->
<!--  ************************************** -->
<resources>
    <string name="app_name">Sports IO</string>
    <string name="osid_textViewCreateAccount">
        <u>No account? Create one!</u>
    </string>
    <string name="osid_editTextUserName">Username</string>
    <string name="osid_editTextPassword">Password</string>
    <string name="osid_buttonLogin"> LOGIN </string>
    <string name="osid_textViewRegisterToolBarText">Get Started!</string>
    <string name="osid_editTextFirstName">First name</string>
    <string name="osid_editTextLastName">Last name</string>
    <string name="osid_editTextEmail">Email</string>
    <string name="osid_editTextPhoneNumber">Phone number</string>
    <string name="osid_buttonRegister">REGISTER</string>
    <string name="osid_textViewLoginToAccount">
        <u> Got an account? Sign in here! </u>
    </string>
    <string name="osid_textViewUsernameRules">*length between 3 and 30</string>
    <string name="osid_textViewPasswordRulesNumeric">*must contain one number</string>
    <string name="osid_textViewPasswordRulesLowercase">*must contain one lowercase character</string>
    <string name="osid_textViewPasswordRulesUppercase">*must contain one uppercase character</string>
    <string name="osid_textViewPasswordRulesLength">*length between 5 and 30</string>
    <string name="osid_textViewNameRulesEnglishCharacters">*only english letters</string>
    <string name="osid_textViewNameRulesLength">*length between 2 and 15</string>
    <string name="osid_textViewEmailRules">*must follow this format: person@examle.com</string>
    <string name="osid_textViewPhoneNumberRules">*10 numbers</string>
    <string name="osid_textViewToolBarMyProfile">My Profile</string>
    <string name="osid_buttonSave">Save</string>
    <string name="osid_mainActivityTitle">
        Courses
    </string>
    <string name="osid_textViewWriteNotes">Write Notes</string>
    <string name="osid_buttonAdd">+</string>
    <string name="osid_editTextCardNumber">Card Number</string>
    <string name="osid_textViewCardNumberRules">*16 numbers</string>
    <string name="osid_editTextCardHolderName">Card Holder Name</string>
    <string name="osid_textViewCardHolderNameRules">*only english letters</string>
    <string name="osid_editTextCardCVV">CVV</string>
    <string name="osid_textViewCardCVVRules">*3 numbers</string>
    <string name="osid_editTextCardExpireDateMonth">Month - 2#</string>
    <string name="osid_editTextCardExpireDateYear">Year - 4#</string>

    <string name="osid_navigationDrawerOpen">Open navigation drawer</string>
    <string name="osid_navigationDrawerClose">Close navigation drawer</string>
    <string name="osid_titlePlaceholder">title</string>
    <string name="osid_ratingPlaceholder">rating</string>
    <string name="osid_pricePlaceholder">Price</string>
    <string name="osid_buttonRemove">-</string>
    <string name="osid_numberPlaceholder">1</string>
    <string name="osid_addToCart">Add to cart</string>
    <string name="osid_removeFromCart">Remove From Cart</string>
    <string name="osid_placeOrder">Place Order</string>
    <string name="osid_totalWithTax">Total With Tax</string>
    <string name="osid_checkout">Checkout</string>
    <string name="osid_orderSummary">Orders Summary</string>
</resources>