<?xml version="1.0" encoding="utf-8"?>

<!--  ************************************** -->
<!--     MADE BY OSID ABU-ALRUB (1183096)    -->
<!--  ************************************** -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/osid_universalPadding">

            <TextView
                style="@style/osid_textViewTitle"
                android:text="@string/app_name"
                android:id="@+id/textViewTitle"
                />

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextUserName"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewUserNameRulesLength"
                android:text="@string/osid_textViewUsernameRules"
                />


            <EditText
                android:id="@+id/editTextPassword"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextPassword"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPasswordRulesNumeric"
                android:text="@string/osid_textViewPasswordRulesNumeric"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPasswordRulesLowercase"
                android:text="@string/osid_textViewPasswordRulesLowercase"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPasswordRulesUppercase"
                android:text="@string/osid_textViewPasswordRulesUppercase"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPasswordRulesLength"
                android:text="@string/osid_textViewPasswordRulesLength"
                />

            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextFirstName"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textViewFirstNameRulesEnglishCharacters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osid_textViewNameRulesEnglishCharacters" />

            <TextView
                android:id="@+id/textViewFirstNameRulesLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osid_textViewNameRulesLength" />


            <EditText
                android:id="@+id/editTextLastName"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextLastName"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLastNameRulesEnglishCharacters"
                android:text="@string/osid_textViewNameRulesEnglishCharacters"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewLastNameRulesLength"
                android:text="@string/osid_textViewNameRulesLength"
                />


            <EditText
                android:id="@+id/editTextEmail"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextEmail"
                android:layout_marginTop="30dp"
                android:inputType="textEmailAddress"/>

            <TextView
                android:id="@+id/textViewEmailRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osid_textViewEmailRules" />


            <EditText
                android:id="@+id/editTextPhoneNumber"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextPhoneNumber"
                android:layout_marginTop="30dp"
                android:inputType="number"/>

            <TextView
                android:id="@+id/textViewPhoneNumberRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osid_textViewPhoneNumberRules" />

            <Button
                android:id="@+id/buttonRegister"
                android:onClick="buttonRegisterHandleClick"
                android:layout_marginTop="30dp"
                android:text="@string/osid_buttonRegister"
                android:layout_gravity="center_horizontal"
                style="@style/osid_buttonStyle" />

            <TextView
                android:id="@+id/textViewCreateAccount"
                android:text="@string/osid_textViewLoginToAccount"
                android:layout_gravity="center_horizontal"
                style="@style/osid_textViewLoginOrRegister" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>