<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/osid_universalPadding">

            <TextView
                style="@style/osid_textViewTitle"
                android:text="@string/app_name"
                android:id="@+id/textViewTitle"
                />

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/osid_editTextStyle"
                android:hint="@string/osid_editTextUserName"
                android:layout_below="@id/textViewTitle"
                android:layout_marginTop="30dp"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textViewUsernameRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextUsername"
                android:text="@string/osid_textViewUsernameRules" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/osid_editTextStyle"
                android:layout_below="@id/editTextUsername"
                android:layout_marginTop="30dp"
                android:hint="@string/osid_editTextPassword"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/textViewPasswordRulesNumeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:text="@string/osid_textViewPasswordRulesNumeric" />

            <TextView
                android:id="@+id/textViewPasswordRulesLowercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesNumeric"
                android:text="@string/osid_textViewPasswordRulesLowercase" />

            <TextView
                android:id="@+id/textViewPasswordRulesUppercase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesLowercase"
                android:text="@string/osid_textViewPasswordRulesUppercase" />

            <TextView
                android:id="@+id/textViewPasswordRulesLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewPasswordRulesUppercase"
                android:text="@string/osid_textViewPasswordRulesLength" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/osid_buttonLogin"
                android:layout_below="@+id/textViewPasswordRulesUppercase"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:onClick="buttonLoginHandleClick"
                style="@style/osid_buttonStyle"/>

            <TextView
                android:id="@+id/textViewCreateAccount"
                android:text="@string/osid_textViewCreateAccount"
                android:layout_below="@+id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:onClick="textViewCreateAccountHandleClick"
                style="@style/osid_textViewLoginOrRegister" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>